--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,11 @@
             <label>Body</label>
             <textarea rows="4" cols="50" name="body" id="body" required></textarea>
             <br><br>
+            <label>icon</label>
+            <br><br>
+            <input type="file" name="icon" id="icon">
+            <br><br>
+            <img src="" sizes="30" id="img-preview">
             <button type="submit" id="postSubmit">Send</button>
         </fieldset>
     </form>
